--- a/src/backend/build.ipynb
+++ b/src/backend/build.ipynb
@@ -532,7 +532,7 @@
     }
    ],
    "source": [
-    "with open('report.json') as f:\n",
+    "with open(\"report.json\") as f:\n",
     "    report = json.load(f)\n",
     "\n",
     "report"
@@ -616,13 +616,18 @@
     "\n",
     "    if table_entries:\n",
     "        modified_docx_path = update_table_of_contents(\n",
-    "             modified_docx_path if modified_docx_path else docx_path, table_entries, page_start_col, page_end_col\n",
+    "            modified_docx_path if modified_docx_path else docx_path,\n",
+    "            table_entries,\n",
+    "            page_start_col,\n",
+    "            page_end_col,\n",
     "        )\n",
     "\n",
     "    # Convert the modified DOCX file to PDF\n",
-    "    pdf_path = convert_docx_to_pdf(modified_docx_path if modified_docx_path else docx_path)\n",
+    "    pdf_path = convert_docx_to_pdf(\n",
+    "        modified_docx_path if modified_docx_path else docx_path\n",
+    "    )\n",
     "\n",
-    "    os.remove(modified_docx_path) if modified_docx_path else None # issue: Sometimes this is the original docx file, not the modified one\n",
+    "    (os.remove(modified_docx_path) if modified_docx_path else None)\n",
     "\n",
     "    # Cleanup intermediate files\n",
     "    for file_path in intermediate_files:\n",
@@ -636,7 +641,7 @@
     "    if os.path.exists(pdf_reader_file_path):\n",
     "        os.remove(pdf_reader_file_path)\n",
     "\n",
-    "    return (pdf_reader, len(pdf_reader.pages))\n"
+    "    return (pdf_reader, len(pdf_reader.pages))"
    ]
   },
   {
@@ -649,6 +654,7 @@
     "import os\n",
     "from io import StringIO\n",
     "from typing import Optional, Any\n",
+    "from pydantic import BaseModel\n",
     "\n",
     "\n",
     "def get_pdf_and_page_count(file_path):\n",
@@ -657,7 +663,7 @@
     "\n",
     "\n",
     "def vars_to_mapping(variables):\n",
-    "    return {var['template_text']: var['constant_value'] for var in variables}\n",
+    "    return {var[\"template_text\"]: var[\"constant_value\"] for var in variables}\n",
     "\n",
     "\n",
     "def section_has_files(section):\n",
@@ -673,13 +679,12 @@
     "                return True\n",
     "    return False\n",
     "\n",
-    "from pydantic import BaseModel\n",
     "\n",
     "class BookmarkItem(BaseModel):\n",
     "    title: str\n",
     "    page: int\n",
     "    parent: Optional[\"BookmarkItem\"] = None\n",
-    "    outline_element: Optional[Any] = None\n",
+    "    outline_element: Optional[Any] = None # This is a placeholder for the outline element that will be created in the second pass\n",
     "\n",
     "\n",
     "def generate_pdf_pass_one(report: dict):\n",
@@ -695,29 +700,26 @@
     "        base_directory = os.path.join(base_directory, section[\"base_directory\"])\n",
     "        base_directory = os.path.normpath(base_directory)\n",
     "        if section.get(\"bookmark_name\") and section_has_files(section):\n",
-    "            # root_bookmark = writer.add_outline_item(\n",
-    "            #     section[\"bookmark_name\"], current_page, root_bookmark\n",
-    "            # )\n",
-    "            root_bookmark = BookmarkItem(title=section[\"bookmark_name\"], page=current_page, parent=root_bookmark)\n",
+    "            root_bookmark = BookmarkItem(\n",
+    "                title=section[\"bookmark_name\"], page=current_page, parent=root_bookmark\n",
+    "            )\n",
     "            bookmark_data.append(root_bookmark)\n",
     "\n",
     "        for child in section[\"children\"]:\n",
     "            if child[\"type\"] == \"DocxTemplate\":\n",
     "                if child[\"bookmark_name\"] and child[\"exists\"]:\n",
-    "                    # writer.add_outline_item(\n",
-    "                    #     child[\"bookmark_name\"], current_page, root_bookmark\n",
-    "                    # )\n",
     "                    bookmark_data.append(\n",
-    "                        BookmarkItem(title=child[\"bookmark_name\"], page=current_page, parent=root_bookmark)\n",
-    "                                         )\n",
+    "                        BookmarkItem(\n",
+    "                            title=child[\"bookmark_name\"],\n",
+    "                            page=current_page,\n",
+    "                            parent=root_bookmark,\n",
+    "                        )\n",
+    "                    )\n",
     "\n",
     "                if child[\"exists\"]:\n",
     "                    docx_path = os.path.normpath(\n",
     "                        os.path.join(base_directory, child[\"docx_path\"])\n",
     "                    )\n",
-    "                    # pdf, num_pages = convert_docx_template_to_pdf( # change this to only return num_pages\n",
-    "                    #     docx_path, replacements=vars_to_mapping(section[\"variables\"])\n",
-    "                    # )\n",
     "                    _, num_pages = convert_docx_template_to_pdf(docx_path)\n",
     "                    docx = {\n",
     "                        \"type\": \"docxTemplate\",\n",
@@ -725,7 +727,9 @@
     "                        \"path\": docx_path,\n",
     "                        \"replacements\": vars_to_mapping(section[\"variables\"]),\n",
     "                        \"num_pages\": num_pages,\n",
-    "                        \"table_entries\": child.get(\"table_entries\"), # or []?\n",
+    "                        \"table_entries\": child.get(\n",
+    "                            \"table_entries\"\n",
+    "                        ),  # or []?. Copilot suggested so maybe it's better.\n",
     "                        \"page_start\": current_page,\n",
     "                        \"page_start_col\": child.get(\"page_start_col\"),\n",
     "                        \"page_end_col\": child.get(\"page_end_col\"),\n",
@@ -735,10 +739,11 @@
     "\n",
     "            if child[\"type\"] == \"FileType\":\n",
     "                if child[\"bookmark_name\"] and child[\"files\"]:\n",
-    "                    # writer.add_outline_item(\n",
-    "                    #     child[\"bookmark_name\"], current_page, root_bookmark\n",
-    "                    # )\n",
-    "                    file_type_bookmark = BookmarkItem(title=child[\"bookmark_name\"], page=current_page, parent=root_bookmark)\n",
+    "                    file_type_bookmark = BookmarkItem(\n",
+    "                        title=child[\"bookmark_name\"],\n",
+    "                        page=current_page,\n",
+    "                        parent=root_bookmark,\n",
+    "                    )\n",
     "                    bookmark_data.append(file_type_bookmark)\n",
     "\n",
     "                directory_source = os.path.normpath(\n",
@@ -756,7 +761,6 @@
     "                        os.path.join(directory_source, file[\"file_path\"])\n",
     "                    )\n",
     "                    pdf, num_pages = get_pdf_and_page_count(file_path)\n",
-    "                    # writer.append(pdf, import_outline=False)\n",
     "                    file_data = {\n",
     "                        \"type\": \"FileData\",\n",
     "                        \"id\": file[\"id\"],\n",
@@ -778,7 +782,7 @@
     "                build_pdf_data(child, base_directory, root_bookmark)\n",
     "\n",
     "    build_pdf_data(report)\n",
-    "    return writer_data, bookmark_data\n"
+    "    return writer_data, bookmark_data"
    ]
   },
   {
@@ -789,23 +793,30 @@
    "source": [
     "def compose_pdf(writer_data: dict) -> PdfWriter:\n",
     "    writer = PdfWriter()\n",
-    "    id_to_page_start = {data['id']: data['page_start'] + 1 for data in writer_data} # sections are not included in this mapping\n",
+    "    id_to_page_start = {\n",
+    "        data[\"id\"]: data[\"page_start\"] + 1 for data in writer_data\n",
+    "    }  # sections are not included in this mapping\n",
     "\n",
     "    def compose_pdf_inner(writer_data):\n",
     "        nonlocal writer\n",
     "        nonlocal id_to_page_start\n",
     "        for data in writer_data:\n",
-    "          if data[\"type\"] == \"docxTemplate\":\n",
-    "              # table_entries = {entry_name: id_to_page_start.get(entry_id) for entry_name, entry_id in data['table_entries']}\n",
-    "              table_entries = {}\n",
-    "              for entry_name, entry_id in data['table_entries']:\n",
-    "                  table_entries[entry_name] = id_to_page_start.get(entry_id)\n",
-    "              pdf, _ = convert_docx_template_to_pdf(data['path'], replacements=data['replacements'], table_entries=table_entries, page_start_col=data['page_start_col'], page_end_col=data['page_end_col'])\n",
-    "              writer.append(pdf, import_outline=False)\n",
-    "          if data[\"type\"] == \"FileData\":\n",
-    "              writer.append(data[\"pdf\"], import_outline=False)\n",
-    "          # if data[\"type\"] == \"Section\":\n",
-    "          #     compose_pdf_inner(data)\n",
+    "            if data[\"type\"] == \"docxTemplate\":\n",
+    "                table_entries = {}\n",
+    "                for entry_name, entry_id in data[\"table_entries\"]:\n",
+    "                    table_entries[entry_name] = id_to_page_start.get(entry_id)\n",
+    "                pdf, _ = convert_docx_template_to_pdf(\n",
+    "                    data[\"path\"],\n",
+    "                    replacements=data[\"replacements\"],\n",
+    "                    table_entries=table_entries,\n",
+    "                    page_start_col=data[\"page_start_col\"],\n",
+    "                    page_end_col=data[\"page_end_col\"],\n",
+    "                )\n",
+    "                writer.append(pdf, import_outline=False)\n",
+    "            if data[\"type\"] == \"FileData\":\n",
+    "                writer.append(data[\"pdf\"], import_outline=False)\n",
+    "            # if data[\"type\"] == \"Section\":\n",
+    "            #     compose_pdf_inner(data)\n",
     "\n",
     "    compose_pdf_inner(writer_data)\n",
     "    return writer"
@@ -823,7 +834,9 @@
     "            parent = bookmark.parent.outline_element\n",
     "        else:\n",
     "            parent = None\n",
-    "        bookmark.outline_element = writer.add_outline_item(bookmark.title, bookmark.page, parent)\n",
+    "        bookmark.outline_element = writer.add_outline_item(\n",
+    "            bookmark.title, bookmark.page, parent\n",
+    "        )\n",
     "    return writer"
    ]
   },
@@ -835,7 +848,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c19641cc919b40d3a85b49e20732f4ed",
+       "model_id": "e06e133be5e9441193cfc975573230cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -849,7 +862,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05b7afb478744574ad590d6a0020d127",
+       "model_id": "d12ef0af0e3b4ae9aeb74691cffb6df7",
        "version_major": 2,
        "version_minor": 0
       },
