Add build from table entries in backend

--- a/src/backend/build.ipynb
+++ b/src/backend/build.ipynb
@@ -544,6 +544,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# convert_docx.py\n",
     "import os\n",
     "from docx import Document\n",
     "from python_docx_replace import docx_replace, docx_get_keys\n",
@@ -650,6 +651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# build.py\n",
     "from PyPDF2 import PdfWriter, PdfReader\n",
     "import os\n",
     "from io import StringIO\n",
@@ -782,15 +784,8 @@
     "                build_pdf_data(child, base_directory, root_bookmark)\n",
     "\n",
     "    build_pdf_data(report)\n",
-    "    return writer_data, bookmark_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return writer_data, bookmark_data\n",
+    "\n",
     "def compose_pdf(writer_data: dict) -> PdfWriter:\n",
     "    writer = PdfWriter()\n",
     "    id_to_page_start = {\n",
@@ -819,15 +814,8 @@
     "            #     compose_pdf_inner(data)\n",
     "\n",
     "    compose_pdf_inner(writer_data)\n",
-    "    return writer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return writer\n",
+    "\n",
     "def add_bookmarks(writer: PdfWriter, bookmarks: list):\n",
     "    for bookmark in bookmarks:\n",
     "        if bookmark.parent:\n",
@@ -837,54 +825,8 @@
     "        bookmark.outline_element = writer.add_outline_item(\n",
     "            bookmark.title, bookmark.page, parent\n",
     "        )\n",
-    "    return writer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e06e133be5e9441193cfc975573230cc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d12ef0af0e3b4ae9aeb74691cffb6df7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(True, <_io.FileIO [closed]>)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "    return writer\n",
+    "\n",
     "writer_data, bookmark_data = generate_pdf_pass_one(report)\n",
     "writer = compose_pdf(writer_data)\n",
     "writer = add_bookmarks(writer, bookmark_data)\n",
